--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.7",
+    "@mui/styled-engine-sc": "^5.1.0",
     "bcrypt": "^5.0.0",
     "concurrently": "^6.0.0",
     "cookie-parser": "^1.4.5",
@@ -26,7 +31,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "peer": "^0.6.1",
-    "socket.io": "^3.1.2"
+    "react-reactions": "^0.1.3",
+    "socket.io": "^3.1.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
